--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,6 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "lib": ["es2015", "dom"],
-    "declaration": true
+    "lib": ["es2015", "dom"]
   }
 }
