--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
   },
   "homepage": "https://github.com/wernerdegroot/data-fetching-playground#readme",
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "webpack": "^4.9.1"
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-redux": "5.0.7",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "webpack": "4.1.1"
   },
   "devDependencies": {
-    "@types/react": "^16.3.14",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^6.0.0",
-    "awesome-typescript-loader": "^5.0.0",
-    "source-map-loader": "^0.2.3",
+    "@types/react": "16.0.40",
+    "@types/react-dom": "16.0.4",
+    "@types/react-redux": "5.0.15",
+    "awesome-typescript-loader": "4.0.1",
+    "source-map-loader": "0.2.3",
     "typescript": "^2.8.3",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "2.0.12"
   }
 }
