--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "5.0.7",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "reselect": "^3.0.1",
     "webpack": "4.1.1"
   },
   "devDependencies": {
